fix digit audit alignment subtitle

--- a/src/sass/_common/components.scss
+++ b/src/sass/_common/components.scss
@@ -30,7 +30,7 @@
 
 .highcharts-container {
     .highcharts-subtitle {
-        width: 240px !important;
+        white-space: normal !important;
 
         > div {
             &:not(.delay) {
